fix(graph): fixed graph line vs preview background z-index precedence issues with left-most column

--- a/src/modules/Graph/components/ColumnBackground/ColumnBackground.module.scss
+++ b/src/modules/Graph/components/ColumnBackground/ColumnBackground.module.scss
@@ -11,6 +11,7 @@
   right: 0;
   border-bottom-left-radius: 20px;
   border-top-left-radius: 20px;
+  z-index: 0;
 }
 
 .noLogBackground {
